[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gui/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/music/house-in-a-forest-loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sound-effects/game-over.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/death_sound_player.gd" type="Script" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.180392, 0.203922, 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="Path2D"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 232, 368 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerStartingPosition" type="Position2D" parent="."]
position = Vector2( 232, 368 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[node name="DeathSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
script = ExtResource( 7 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
